Fix a WebRtcLogUploader threading bug.

It was grabbing a UI-thread-bound URLLoaderFactory Mojo interface on
the IO thread, and using it there. This CL modifies it to creates its
own IO-thread-bound URLLoaderFactory (It doesn't share with anything
else, because SystemNetworkContextManager isn't used much on the IO
thread).

It may be possible to just move the requests over to the UI thread,
and use a shared URLLoaderFactory, but this seems the simplest fix.
Also, requests come in on the IO thread through a
content::MessageHandler, so we're stuck with extra hops, either way.

Bug: 883686
Change-Id: I71b2050d5ac4c7d58d30640c0579fa0ae5bf8e13
Reviewed-on: https://chromium-review.googlesource.com/c/1264920
Commit-Queue: Matt Menke <mmenke@chromium.org>
Reviewed-by: Sergey Ulanov <sergeyu@chromium.org>
Reviewed-by: Maks Orlovich <morlovich@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597656}